--- a/src/components/sprite-info/sprite-info.css
+++ b/src/components/sprite-info/sprite-info.css
@@ -1,5 +1,6 @@
 @import "../../css/units.css";
 @import "../../css/colors.css";
+@import "../../css/filters.css";
 
 .sprite-info {
     padding: 0.75rem;
@@ -45,6 +46,7 @@
     padding: 0.5rem;
     outline: none;
     user-select: none;
+    filter: $filter-icon-gray;
 }
 
 .icon {
